src/components/components.css
:root{
    --side-panel-width:80px;
    --track-panel-width:200px;
}

*{
    box-sizing: border-box;
}

.AudioRegion{
    position:absolute;
    height:40px;
    margin: 5px 0 ;
    background:pink;
    border: solid black 1px;
    display:flex;
    justify-content: space-between;
    align-items: center;

}
.AudioRegion:hover{
    cursor:move;
}
.AudioRegionDrag{
    background:red;
}

.AudioTrack{
    background:cyan;
    border:solid black 1px;
    white-space: nowrap;
    display:flex;
}
.AudioTrack .content{
    position:relative;
    width:100%;
    height:50px;
}


.EditorField{
    border: solid black 1px;
    width:max-content;
    position: relative;
}
.ToolField{
    width:min-content;
    display:inline-block;
}
.AudioField{
    width:max-content;
    overflow:hidden;
    display:inline-block;
}

.TrackTool{
    z-index: 9;
    background:yellow;
    border:solid black 1px;
    display:inline-block;
    position: sticky;
    left:0;
    width:var(--side-panel-width);
    display:flex;
    justify-content: center;
    align-items: center;
}

.TrackToolHelper{
    display:none;
    z-index: 10;
    background:blue;
    border:solid black 1px;
    position: absolute;
    left: calc(100%);
    width:var(--track-panel-width);
    flex-direction: row;
    height:50px;
    overflow: hidden;
}
.TrackTool:hover .TrackToolHelper{
    display:flex;
}


.TransportTimer{
    display:inline-block;
    position: sticky;
    left:0;
    border:solid black 1px;
    background:white;
    width:var(--side-panel-width);
}
.Timeline{
    position:relative;
    border:solid black 1px;
    width:max-content;
    white-space: nowrap;
}
.Timeline .TimelineBar{
    display:inline-block;
    border:solid gray 1px;
}

.Timeline .Playhead{
    position:absolute;
    z-index: 100;
    content:'';
    width:1px;
    height:800px;
    left:20%;
    background-color: red;
    border:solid red 1px;
}

